--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
+    <header>
+      <div class="headerLogo">JavaScript demo</div>
+      <nav>
+        <ul>
+          <li>Nav</li>
+          <li>Nav</li>
+          <li>Nav</li>
+        </ul>
+      </nav>
+    </header>
     <main>
-      <h1>Home page</h1>
+      <h1 id="javaScriptData"></h1>
     </main>
+    <footer>
+      <p>Laget av Babita Sharma</p>
+    </footer>
   </body>
 </html>
